quick fix in doc

--- a/README
+++ b/README
@@ -3,4 +3,4 @@ Web Broadcast
 
 A simple broadcast system for send all the messages typed in console to browser of all connected clients.
 
-![ScreenShot](./docs/ss.png)
+![ScreenShot](https://raw.githubusercontent.com/bcfurtado/broadcast-experiment/master/docs/ss.png)
